--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_install:
   - sudo service docker restart ; sleep 10
   - jdk_switcher use oraclejdk8
 install:
-  # - git clone https://github.com/jhipster/jhipster-sample-app.git
+  - git clone https://github.com/jhipster/jhipster-sample-app.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gradle.git
-  # - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
+  - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gulp.git
-  # - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
+  - git clone https://github.com/jhipster/jhipster-sample-app-mongodb.git
   - git clone https://github.com/jhipster/jhipster-sample-app-cassandra.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-dto.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-elasticsearch.git
@@ -23,43 +23,43 @@ install:
   # - git clone https://github.com/jhipster/jhipster-sample-app-token.git
   # - docker pull mysql
   # - docker pull postgres
-  # - docker pull mongo
+  - docker pull mongo
   - docker pull cassandra
   - docker build -t jhipster-cassandra .
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn install
-  # - jdk_switcher use oraclejdk7
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-java7/ && mvn install
-  # - jdk_switcher use oraclejdk8
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/ && mvn install
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn dependency:go-offline
+  - jdk_switcher use oraclejdk7
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-java7/ && mvn dependency:go-offline
+  - jdk_switcher use oraclejdk8
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/ && mvn dependency:go-offline
   - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/ && mvn dependency:go-offline
 script:
   #---------------------------------------------
   # jhipster-sample-app
   #---------------------------------------------
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/
-  # - mvn spring-boot:run &
-  # - sleep 60
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp ; sleep 10
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/
+  - mvn spring-boot:run &
+  - sleep 60
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp ; sleep 10
   #---------------------------------------------
   # jhipster-sample-app-java7
   #---------------------------------------------
-  # - jdk_switcher use oraclejdk7
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-java7/
-  # - mvn spring-boot:run &
-  # - sleep 60
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp ; sleep 10
-  # - jdk_switcher use oraclejdk8
+  - jdk_switcher use oraclejdk7
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-java7/
+  - mvn spring-boot:run &
+  - sleep 60
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp ; sleep 10
+  - jdk_switcher use oraclejdk8
   #---------------------------------------------
   # jhipster-sample-app-mongodb
   #---------------------------------------------
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
-  # - docker run -d -p 27017:27017 mongo ; sleep 10
-  # - mvn spring-boot:run &
-  # - sleep 60
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp ; sleep 10
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
+  - docker run -d -p 27017:27017 mongo ; sleep 10
+  - mvn spring-boot:run &
+  - sleep 60
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp ; sleep 10
   #---------------------------------------------
   # jhipster-sample-app-cassandra
   #---------------------------------------------
