--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - sudo chmod +x /usr/local/bin/docker-compose
   - docker version
   - docker-compose version
-  # - git clone https://github.com/jhipster/jhipster-sample-app.git
+  - git clone https://github.com/jhipster/jhipster-sample-app.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gradle.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-java7.git
   # - git clone https://github.com/jhipster/jhipster-sample-app-gulp.git
@@ -28,16 +28,21 @@ install:
   # - git clone https://github.com/jhipster/jhipster-sample-app-token.git
   # - docker pull mysql
   # - docker pull postgres
-  - docker pull mongo
+  # - docker pull mongo
   # - docker pull cassandra
   # - docker build -t jhipster-cassandra .
   # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn dependency:go-offline
   # - jdk_switcher use oraclejdk7
   # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-java7/ && mvn dependency:go-offline
   # - jdk_switcher use oraclejdk8
-  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/ && mvn dependency:go-offline
+  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/ && mvn dependency:go-offline
   # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-cassandra/ && mvn dependency:go-offline
+env:
+  - REP=jhipster-sample-app
+  - REP=jhipster-sample-app-mongodb
 script:
+  - cd $TRAVIS_BUILD_DIR/$REP
+  - ls -al
   #---------------------------------------------
   # jhipster-sample-app
   #---------------------------------------------
@@ -59,13 +64,13 @@ script:
   #---------------------------------------------
   # jhipster-sample-app-mongodb
   #---------------------------------------------
-  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
+  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app-mongodb/
   # - docker run -d -p 27017:27017 mongo ; sleep 10
-  - docker-compose up -d
-  - mvn spring-boot:run &
-  - sleep 60
-  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  - fuser -k 8080/tcp ; sleep 10
+  # - docker-compose up -d
+  # - mvn spring-boot:run &
+  # - sleep 60
+  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  # - fuser -k 8080/tcp ; sleep 10
   #---------------------------------------------
   # jhipster-sample-app-cassandra
   #---------------------------------------------
